# TowerOfHanoi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml  test.yml
cmake/: CMakeTemplateConfig.cmake.in  PKGBUILD.in
examples/: CMakeLists.txt  example1.cpp
include/CMakeTemplate/: CMakeTemplate.hpp
src/: CMakeLists.txt  CMakeTemplate.cpp
tests/: CMakeLists.txt  test1.cpp
